--- a/style.css
+++ b/style.css
@@ -161,3 +161,140 @@ body{
         box-shadow:0px 6px 4px rgba(12, 112, 242, 0.25) ;
         cursor: pointer;
     }
+    /* estioo rodape*/
+    footer{
+        width: 100%;
+        background-color: var(--azul-dnc);
+        margin-bottom: 0;
+    }
+
+    footer .linha-um{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    footer ul{
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+    }
+    footer nav{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 400px;
+    }
+
+    footer h5{
+        text-align: center;
+        color: white;
+        font-weight: 800;
+        font-size: 25px;
+        font-family: var(--fonte-padrao);
+        background-color: var(--preto-dnc);
+        border: 10px;
+
+        padding: 0px 15px 0px 15px;
+        margin-bottom: 15px;
+    }
+    footer ul li{
+        text-align: center;
+        color: white;
+        font-weight: 600px;
+        font-size: 25px;
+        font-family: var(--fonte-padrao);
+
+        margin: 20px 0px 20px 0px;
+    }
+
+    footer ul li a{
+        color: white;
+        text-decoration: none;
+    }
+
+    footer ul li a:hover{
+        color: #c9c9c9;
+    }
+
+    footer .endereco{
+        font-weight: 600px;
+        font-size: 18px;
+        font-family: var(--fonte-padrao);
+        color: white;
+        text-align: center;
+        width: 20%;
+    }
+    footer .linha-dois{
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        margin: 10px;
+        padding: 10px;
+    }
+    footer .linha-dois a{
+        font-family: var(--fonte-padrao);
+        font-size: 25px;
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        padding: 5px;
+    }
+    footer .linha-dois a:first-child{
+        border-right: 3px solid white;
+    }
+    footer.linha-dois a:hover{
+        color: var(--cinza-hover);
+    }
+/*ajuste  para dispositivos moveis*/
+
+@media screen and (max-width: 600px){
+    #menuTopo{
+        height: auto;
+        flex-direction: column;
+    }
+    #iconesMenu{
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+    #iconesMenu a{
+        display: flex;
+        height: 50px;
+        align-items: center;
+    }
+    #menuTopo button{
+        width: 100px;
+        margin: 0px;
+    }
+    /*section*/
+
+    section h1{
+        font-size: 38px;
+    }
+    section h2{
+        font-size: 30px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    form{
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .check-box-itens label{
+        font-size: 17px;
+    }
+    
+    /*ajustando footer*/
+    footer .linha-um{
+        flex-direction: column;
+    }
+    footer .endereco{
+        width: 95%;
+        margin-bottom: 20px;
+    }
+    footer .linha-dois{
+        padding-bottom: 10px;
+    }
+}
